--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,3 +1,68 @@
 .home {
     color: red;
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+    padding-bottom: 10%;
+
+    img{
+        height: 68px;
+    }
+    .header-link {
+        list-style-type: none;
+        flex-wrap: nowrap;
+        display: flex;
+        gap: 50px;
+        position: absolute;
+        right: 100px;       
+    }       
+}
+
+.image-container {
+    position: relative;
+
+    img {
+        width: 100%;
+    }
+
+    .centered-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 48px;
+        line-height: 68.45px;
+        color: $white;
+    }
+}
+
+.logement-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 90%;
+    background-color: $white;
+    margin-top: 10%;
+    margin-left: 5%;
+    border-radius: 25px 25px 0px 0px;
+}
+
+.logement {
+    border-radius: 15px; 
+    padding: 20px;
+    margin: 20px;
+    width: 20%;
+  
+    h2 {
+      color: $white;
+      margin-top: 80%;
+    }
+  
+}
+
+.image-background {
+  background-size: cover;
+  background-position: center;
+  width: 340px;
+  height: 340px;
 }
