--- a/src/style/Banner.scss
+++ b/src/style/Banner.scss
@@ -17,7 +17,7 @@
         top: 34%;
         left: 21%;
 
-        color: #FFF;
+        color: $white;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         font-size: 48px;
         font-style: normal;
@@ -28,11 +28,15 @@
 
 @media screen and (max-width: 748px) {
     .banner {
-        padding: 20px;
-        height: 111px;
-
+        margin-top: 10%;
+        margin-bottom: 15%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0px;
         img {
-            height: 111px;
+            height: 336px;
+            width: 90%;
         }
 
         span {
