--- a/src/style/Dropdown.scss
+++ b/src/style/Dropdown.scss
@@ -1,41 +1,46 @@
-.dropdown-section{
+.dropdown-section {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0; 
-
-       .dropdown {
-        position: relative;
-        display: block;
-        width: 70%;
-        border-top: 1px solid #f9f9f9;  
-        
-        &-button {
-        display: block;
+    margin: 0;
+    margin-top: 3%;
+  
+    .dropdown {
+      position: relative;
+      width: 90%;
+  
+      &-button {
         width: 100%;
-        background: rgba(255, 96, 96, 1);
+        background: $primary;
         border: none;
         text-align: left;
         padding: 10px;
         cursor: pointer;
         font-size: 18px;
-        color: $white; 
+        color: $white;
+        height: 58px;
+        line-height: normal;
+        border-radius: 10px;
+  
+        img {
+            bottom: 25%;
+            margin-left: 90%;
+            position: relative;
         }
-    
-        &-content {
+      }
+  
+      &-content {
         display: none;
         padding: 10px;
-        border-top: 1px solid #f9f9f9;
-        color: rgba(255, 96, 96, 1);
+        color: $primary;
         background: rgba(246, 246, 246, 1);
-        }
-    
-        &.open {
+      }
+  
+      &.open {
         .dropdown-content {
-            display: block;
+          display: block;
         }
       }
     }
-    
-   }
- 
+  }
+  
