--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -17,10 +17,10 @@ header {
             li {
                 text-decoration: none;
                 display: inline;
-                color: #ff6060;
+
                 a {
                     height: 68px;
-                    color: $primary;
+                    color: black;
                     text-decoration: none;
 
                     &:nth-child(1) {
@@ -48,17 +48,19 @@ header {
 @media screen and (max-width: 748px) {
     header {
         nav {
-            padding: 20px;
+            padding: 28px;
 
             img {
                 height: 47px;
             }
 
             ul {
+                padding: 0;
+
                 li {
                     a {
                         font-size: 12px;
-                        padding: 10px 10px;
+                        // padding: 10px 10px;
                         text-transform: uppercase;
                     }
                 }
