page logement + scss

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -8,6 +8,9 @@
 @import './About.scss';
 @import './Dropdown.scss';
 @import './Carousel.scss';
+@import './Lodging.scss';
+@import './Tags.scss';
+@import './Ratings.scss';
 
 body {
   margin: 0;
