--- a/src/style/About.scss
+++ b/src/style/About.scss
@@ -1,9 +1,17 @@
 .about {
     margin-top: 30px;
+
+    .dropdown-container {
+        margin-top: 30px;
+    }
 }
 
 @media screen and (max-width: 748px) {
     .about {
         margin-top: 0;
+
+        .container-dropdowns {
+            padding: 28px;
+        }
     }
 }
