--- a/src/style/Carousel.scss
+++ b/src/style/Carousel.scss
@@ -1,34 +1,56 @@
-.carousel-container {
-    position: relative;
-    
-    // Bouton précédent
-    .prev {
-      position: absolute;
-      top: 50%;
-      left: 10px; 
-      transform: translateY(-50%);
-      z-index: 10;
-      cursor: pointer;
-      width: 50px;
-      height: 50px;
-      background: none;
-      outline: none;
-      border: none;
+.carrousel {
+  width: 100%;
+  height: 415px;
+  border-radius: 25px;
+  position: relative;
+
+  .picture {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 25px;
+  }
+
+  .arrow {
+    position: absolute;
+    z-index: 1;
+    top: 40%;
+    height: 79px;
+    cursor: pointer;
+
+    &.arrow-left {
+      left: 3%;
     }
-    
-    // Bouton suivant
-    .next {
-      position: absolute;
-      top: 50%;
-      right: 10px; 
-      transform: translateY(-50%);
-      z-index: 10;
-      cursor: pointer;
-      width: 50px;
-      height: 50px;
-      outline: none;
-      background: none;
-      border: none;
+
+    &.arrow-right {
+      right: 3%;
     }
   }
-  
+
+  span {
+    position: absolute;
+    z-index: 1;
+    bottom: 5%;
+    left: 50%;
+    right: 50%;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 142.6%;
+    color: white;
+  }
+}
+
+@media screen and (max-width: 748px) {
+  .carrousel {
+    height: 255px;
+
+    .arrow {
+      height: 19px;
+    }
+
+    span {
+      display: none;
+    }
+  }
+}
