--- a/src/style/Dropdown.scss
+++ b/src/style/Dropdown.scss
@@ -1,74 +1,66 @@
-.dropdown-section {
+.dropdown-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  margin-top: 3%;
+  flex-direction: column;
+  width: 100%;
 
   .dropdown {
-    position: relative;
-    width: 90%;
+    background-color: $primary;
+    border-radius: 5px;
+    color: white;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 142.6%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 47px;
+    z-index: 1;
 
-    &-button {
-      width: 100%;
-      background: $primary;
-      border: none;
-      text-align: left;
-      padding: 10px;
+    span {
+      padding-left: 20px;
+    }
+
+    img {
+      height: 14px;
+      padding-right: 20px;
       cursor: pointer;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 24px;
-      line-height: 142.6%;
-      color: $white;
-      height: 58px;
-      border-radius: 10px;
-
-      img {
-        bottom: 79%;
-        margin-left: 96%;
-        position: relative;
-      }
     }
+  }
 
-    &-content {
-      display: none;
-      padding: 20px;
-      color: black;
-      background: rgba(246, 246, 246, 1);
-      margin-top: -30px;
-      border-radius: 10px 10px 5px 5px;
-    }
-
-    &.open {
-      .dropdown-content {
-        display: block;
-      }
-    }
+  p {
+    margin-top: -5px;
+    color: black;
+    background-color: $secondary;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding-top: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 142.6%;
   }
 }
 
 @media screen and (max-width: 748px) {
-  .dropdown-section {
-    margin-top: 19px;
-
+  .dropdown-container {
     .dropdown {
-      &-button {
+      height: 30px;
+
+      span {
         font-size: 13px;
-        font-style: normal;
-        font-weight: 700;
-        height: 38px;
-
-        img {
-          height: 10px;
-          bottom: 105%;
-          margin-left: 95%;
-        }
       }
 
-      &-content {
-        font-size: 12px;
+      img {
+        height: 9px;
       }
+    }
+
+    p {
+      font-size: 12px;
     }
   }
 }
