--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -17,3 +17,13 @@
     }
 
 }
+
+@media screen and (max-width: 748px) {
+    .home {
+       
+        .gallery {
+            background-color: unset;
+        }
+    }
+    
+}
