--- a/src/style/NotFound.scss
+++ b/src/style/NotFound.scss
@@ -13,6 +13,7 @@
     .error-text {
       color: rgba(255, 96, 96, 1); 
       font-size: 32px;
+      text-align: center;
     }
   
     .return-link {
