--- a/src/style/Card.scss
+++ b/src/style/Card.scss
@@ -25,8 +25,8 @@
 
 @media screen and (max-width: 748px) {
     .card {
-        margin: 20px 0 0 0;
+        margin: 22px 0 22px 0;
         height: 255px;
-        width: 100%;
+        width: 90%;
     }
 }
