--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -20,10 +20,11 @@
 
 @media screen and (max-width: 748px) {
     .home {
-       
+        margin-top: 0;
+
         .gallery {
             background-color: unset;
         }
     }
-    
+
 }
