--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -21,6 +21,8 @@ body {
   div#root {
     margin-top: 50px;
     height: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
 
     header {
       max-width: $maxWidth;
@@ -42,6 +44,8 @@ body {
     div#root {
       margin-bottom: 209px;
       margin-top: 0;
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 }
